--- a/lesson8/task2/index.html
+++ b/lesson8/task2/index.html
@@ -23,7 +23,7 @@
         border-width: 10px 20px;
         border-style: solid solid dashed dashed;
         border-color: #c3000b #0cff00 #e5b880 #00ffff;
-        margin: 20px 30px 40px 50px;
+        margin: 50px 100px;
       }
     </style>
   </head>
