--- a/lesson8/task2.1/index.html
+++ b/lesson8/task2.1/index.html
@@ -23,13 +23,13 @@
         background-color: bisque;
         border-width: 10px 20px;
         border-style: solid solid dashed dashed;
-        border-color: #c3000b #0cff00 #e5b880 #00ffff;
+        border-color: firebrick chartreuse burlywood aqua;
         margin: 50px 100px;
       }
     </style>
   </head>
 
   <body>
-    <div class="rectangle">Iam colorfull rectangle</div>
+    <div class="rectangle">I am colorfull rectangle</div>
   </body>
 </html>
