--- a/lesson8/task2.1/index.html
+++ b/lesson8/task2.1/index.html
@@ -30,6 +30,6 @@
   </head>
 
   <body>
-    <div class="rectangle">I am colorfull rectangle</div>
+    <div class="rectangle">I am colorful rectangle</div>
   </body>
 </html>
