Layout of the first

--- a/lesson8/task5/index.html
+++ b/lesson8/task5/index.html
@@ -33,7 +33,8 @@
       .container_main_one_two_three {
         background-color: pink;
         border: 2px solid black;
-        height: 100px;
+        padding: 50px;
+        /* height: 100px; */
       }
     </style>
   </head>
