--- a/lesson10/task2/index.html
+++ b/lesson10/task2/index.html
@@ -29,7 +29,7 @@
       <aside class="siteBar">
         <h2 class="text_Bar">News</h2>
         <ul class="list">
-          <li class="">News 1</li>
+          <li class="list_item">News 1</li>
           <li class="list_item">News 2</li>
           <li class="list_item">News 3</li>
         </ul>
