--- a/lesson10/task5/index.html
+++ b/lesson10/task5/index.html
@@ -7,32 +7,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
     <link rel="stylesheet" href="styles.css">
-    <!-- <style>
-        * {
+    <style>
+        /* * {
   box-sizing: border-box;
 }
       header {
-  display: flex;
-  justify-content: center;
+  text-align: center;
 }
        .article {
   margin: 8px;
   padding: 16px;
   background-color: bisque;
+  flex: 1 0 300px;
   
 }
 .articles-list {
     display: flex;
     flex-wrap: wrap;
-}
-.article{
-width: 300px;
-flex-shrink: 1;
-flex-grow:2;
+} */
 
-
-}
-    </style> -->
+    </style>
 </head>
 
 <body>
