--- a/javaScript/lesson1/task1/index.html
+++ b/javaScript/lesson1/task1/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-      <a href="#" onclick="confirm('Are you sure')"
+      <!-- <a href="#" onclick="confirm('Are you sure')" -->
     <script src="index.js"></script>
   </body>
 </html>
